<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/audio_tab"
    android:name="@string/audio_settings_header"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/audio_enable_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/audio_enable" />

        <ToggleButton
            android:id="@+id/audio_enable_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:textOff="@string/disable"
            android:textOn="@string/enable" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/audio_choose_sampling_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/audio_sampling_rate" />

        <Spinner
            android:id="@+id/audio_spinner_sampling_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>