<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/video_tab"
    android:name="@string/video_settings_header"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/video_enable_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_enable" />

        <ToggleButton
            android:id="@+id/video_enable_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:textOff="@string/disable"
            android:textOn="@string/enable" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/video_choose_framerate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_framerate" />

        <Spinner
            android:id="@+id/video_spinner_framerate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/video_choose_resolution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_resolution" />

        <Spinner
            android:id="@+id/video_spinner_resolution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>